fixed drop-down menu alignment with button

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -30,6 +30,7 @@
         color: #fff;
         font-size: 2.5rem;
         padding: 10px;
+        width: 15vw;
     }
 
     .hamItems{
@@ -40,6 +41,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        width: 15vw;
     }
 }
 
