--- a/styles/style.css
+++ b/styles/style.css
@@ -656,6 +656,7 @@ button {
     color: #fff;
     font-size: 2.5rem;
     padding: 10px;
+    width: 15vw;
   }
   .hamItems {
     display: none;
@@ -671,6 +672,7 @@ button {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    width: 15vw;
   }
 }
 @media (max-width: 768px) {
